--- a/css/style.css
+++ b/css/style.css
@@ -17,19 +17,21 @@ body {
   display: flex;
   justify-content: space-around; }
 
-#btnUp-js {
-  position: fixed;
-  height: 5rem;
-  width: 5rem;
-  background-color: rgba(32, 51, 114, 0.5);
-  right: 1rem;
-  bottom: 3rem;
+#btnCircleUp-js {
+  background-color: rgba(255, 255, 255, 0);
   border: none;
+  bottom: 1rem;
+  cursor: pointer;
+  height: 5rem;
+  position: fixed;
+  right: 1rem;
+  width: 5rem;
   z-index: 4;
-  border-radius: 8%; }
-  #btnUp-js i {
+  border-radius: 50%; }
+  #btnCircleUp-js i {
+    color: #203372;
     font-size: 4rem;
-    color: #203372; }
+    opacity: 0.7; }
 
 header {
   background-attachment: fixed;
@@ -192,10 +194,12 @@ header {
         display: flex;
         flex-direction: column; }
         .sect-projects .project-container .left-side .list-left-side .cell {
-          margin-bottom: 4rem;
+          margin-bottom: 5rem;
           padding: 2rem;
           position: relative;
           transition-duration: .5s; }
+          .sect-projects .project-container .left-side .list-left-side .cell .cell-paragraph {
+            min-height: 60px; }
           .sect-projects .project-container .left-side .list-left-side .cell:hover {
             background-color: #030e37;
             box-shadow: 0px 0px 10px 0px #030e37; }
@@ -205,6 +209,10 @@ header {
           .sect-projects .project-container .left-side .list-left-side .cell:hover .project-min .photo-cell {
             background-color: #030e37;
             box-shadow: 0px 0px 10px 0px #030e37; }
+          .sect-projects .project-container .left-side .list-left-side .cell:hover .project-min [class*="rea-"] .photo-layer {
+            opacity: 1; }
+          .sect-projects .project-container .left-side .list-left-side .cell:hover .project-min [class*="rea-"] .layer-icon {
+            opacity: 1; }
           .sect-projects .project-container .left-side .list-left-side .cell .project-min {
             position: absolute;
             right: -65rem;
@@ -232,9 +240,22 @@ header {
                 background-color: rgba(32, 51, 114, 0.692);
                 bottom: 0;
                 left: 0;
+                opacity: 0;
                 position: absolute;
                 right: 0;
-                top: 0; }
+                top: 0;
+                transition-duration: 0.5s; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .layer-icon {
+                color: #f2f2ff;
+                font-size: 4rem;
+                opacity: 0;
+                position: absolute;
+                top: calc(50% - 2rem);
+                transition-duration: 0.5s; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell [class*="code"] {
+                left: 22rem; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell [class*="sear"] {
+                right: 22rem; }
           .sect-projects .project-container .left-side .list-left-side .cell .arrow {
             background-color: #979db1;
             box-shadow: 0px 0px 10px 0px #979db1;
@@ -249,7 +270,7 @@ header {
             border: 0;
             margin: 0;
             position: relative; }
-          .sect-projects .project-container .left-side .list-left-side .cell i {
+          .sect-projects .project-container .left-side .list-left-side .cell .right-arrow {
             font-size: 1.5rem;
             left: -1rem;
             margin-right: 10px;
@@ -259,9 +280,10 @@ header {
             .sect-projects .project-container .left-side .list-left-side .cell .tech-used .cell-icon {
               width: 2.5rem; }
     .sect-projects .project-container .right-side {
-      background-image: url("../images/dev_office2.jpg");
-      background-position: center right;
+      background-image: url("../images/dev_office.jpg");
+      background-position: center;
       background-size: cover;
+      background-attachment: fixed;
       width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
