--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Exo+2:400,500,700,800,900');
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Exo 2", sans-serif;
     margin: 0;
     position: relative;
 }
@@ -27,6 +27,7 @@ $colorOfNav: rgba(32,
 51,
 114,
 1);
+$colorFontNav: rgb(255, 255, 255);
 $navBoxShadow: 0px 0px 10px 0px rgb(32,
 51,
 114);
@@ -34,26 +35,42 @@ $navSize: 3.5rem;
 $navFontSize: 1rem;
 $navFontWeight: 700;
 // button up
-$buttonUpColor: rgba(32,
-51,
-114,
-0.5);
+$buttonUpColor: rgba(255, 255, 255, 0);
 // technologies 
 $techHeightLine: 0.9rem;
 $techLineColor: rgb(255,
 255,
 255);
 $techBoxShadow: 0px 0px 10px 0px $techLineColor;
+$techBackgroundColor: rgb(236, 236, 236);
+$techColorLayer: rgba(32, 51, 114, 0.692);
 //projects
-$projectsMainColor: rgb(151, 157, 177);
-$projectsHoverColor: rgb(3,
-14,
-55);
-
+$projectsMainColor: rgb(31, 55, 134);
+$projectsHoverColor: rgb(249, 250, 253);
+$projectsLeftSideFontColor: rgb(255, 255, 255);
+$projectsHoverFontColor: rgb(0, 0, 0);
+$projectsPhotoLayerColor: rgba(32, 51, 114, 0.692);
+$projectsLayerIconColor: rgb(242, 242, 255);
+//footer
+$footerFormBackgroundColor: rgba(255, 255, 255, 0);
+$footerFormBorderColor: rgb(255, 255, 255);
+$footerFormPlaceholderColor: rgb(255, 255, 255);
+$footerFormButtonColor: rgba(255, 255, 255, 0);
+$footerFormButtonBorderColor: rgb(255, 255, 255);
+$footerFormContainerColor: rgba(32, 51, 114, 0);
+$footerFormIconColor: rgb(255, 255, 255);
+$footerBackgroundColor: rgba(32, 51, 114, 0.342);
+$footerShadowColor: rgb(255, 255, 255);
+$footerFontColor: rgb(255, 255, 255);
+$footerBtnHoverColor: rgb(252, 252, 252);
+$footerBtnBackgroundColor: rgba(255, 255, 255, 0);
+$footerBtnHoverFontColor: rgba(50, 40, 136, 0.473); 
+$footerBoxShadow: 0 0 0.2px $footerShadowColor;
 // mixins
+$titleFontColor: rgb(255, 255, 255);
 @mixin titleOfSection() {
     background-color: $colorOfNav;
-    color: rgb(255, 255, 255);
+    color: $titleFontColor;
     display: inline-block;
     font-size: 2rem;
     padding: 2rem 30px;
@@ -74,7 +91,7 @@ $projectsHoverColor: rgb(3,
 }
 
 #btnCircleUp-js {
-    background-color: rgba(255, 255, 255, 0);
+    background-color: $buttonUpColor; 
     border: none;
     bottom: 1rem;
     cursor: pointer;
@@ -92,12 +109,11 @@ $projectsHoverColor: rgb(3,
 }
 
 header {
-    background-attachment: fixed;
-    background-image: url('../images/header_devstudio_med.jpeg');
+    background-image: url('../images/header_devstudio_large.jpg');
     background-position: 50% 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 80vh;
+    height: 85vh;
     .navbar-container {
         align-items: center;
         display: flex;
@@ -106,6 +122,7 @@ header {
         position: fixed;
         width: 100vw;
         z-index: 1;
+        top: 7.5rem;
         .nav-elem {
             background-color: $colorOfNav;
             box-shadow: $navBoxShadow;
@@ -115,23 +132,26 @@ header {
         .logo-container {
             position: relative;
             width: auto;
+            min-width: 22rem;
             a {
                 display: block;
                 height: $navSize;
                 position: absolute;
                 top: calc(50% - 1.75rem);
                 width: 100%;
+                z-index: 1;
             }
             img {
                 height: auto;
                 width: 100%;
+                position: absolute;
+                top: -151px;
             }
         }
         nav {
             background-color: $colorOfNav;
             box-shadow: $navBoxShadow;
-            color: #fff;
-            font-family: "Moontserrat", sans-serif;
+            color: $colorFontNav;
             font-weight: $navFontWeight;
             height: $navSize;
             letter-spacing: 2.5px;
@@ -149,7 +169,7 @@ header {
                     line-height: $navSize;
                     margin-right: 60px;
                     a {
-                        color: rgb(255, 255, 255);
+                        color: $colorFontNav;
                         font-size: $navFontSize;
                         text-decoration: none;
                     }
@@ -171,7 +191,7 @@ header {
 
 .sect-technologies {
     @include sections();
-    background-color: rgb(236, 236, 236);
+    background-color: $techBackgroundColor;
     .header-of-technologies {
         @include headerOfSection();
         margin-bottom: 3rem;
@@ -183,7 +203,7 @@ header {
         z-index: 0;
     }
     .technologies-layer {
-        background-color: rgba(32, 51, 114, 0.692);
+        background-color: $techColorLayer;
         bottom: 0;
         left: 0;
         position: absolute;
@@ -231,15 +251,19 @@ header {
         margin-bottom: 3rem;
     }
     .header-used-technologies {
-        margin: 0 0 0.5rem 0;
+        margin: 0 0 0.5rem 0; 
     }
     .project-container {
         display: flex;
         margin: 0 auto 0 0;
+        background-image: url("../images/office.jpeg"); 
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
         .left-side {
             background-color: $projectsMainColor;
             box-shadow: 0px 0px 10px 0px $projectsMainColor;
-            color: rgb(255, 255, 255);
+            color: $projectsLeftSideFontColor;
             display: flex;
             padding: 5rem 0 5rem 6rem;
             width: 35%;
@@ -257,6 +281,7 @@ header {
                     &:hover {
                         background-color: $projectsHoverColor;
                         box-shadow: 0px 0px 10px 0px $projectsHoverColor;
+                        color: $projectsHoverFontColor;
                     }
                     &:hover .arrow {
                         background-color: $projectsHoverColor;
@@ -300,7 +325,7 @@ header {
                                 background-image: url("../images/your_life.jpg");
                             }
                             .photo-layer {
-                                background-color: rgba(32, 51, 114, 0.692);
+                                background-color: $projectsPhotoLayerColor;
                                 bottom: 0;
                                 left: 0;
                                 opacity: 0;
@@ -310,7 +335,7 @@ header {
                                 transition-duration: 0.5s;
                             }
                             .layer-icon {
-                                color: rgb(242, 242, 255);
+                                color: $projectsLayerIconColor;
                                 font-size: 4rem;
                                 opacity: 0;
                                 position: absolute;
@@ -357,11 +382,82 @@ header {
             }
         }
         .right-side {
-            background-image: url("../images/dev_office.jpg");
-            background-position: center;
-            background-size: cover;
-            background-attachment: fixed;
+            background-color: rgba(255, 255, 255, 0.521);
             width: 100%;
+        }
+    }
+}
+
+#footer {
+    @include sections();
+    background-color: $footerBackgroundColor;
+    height: 70vh;
+    .title-footer {
+        @include titleOfSection();
+    }
+    .footer-layer {
+        background-image: url("../images/footer_cyclone.jpg");
+        background-position: center;
+        background-size: cover;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: -1;
+    }
+    .contact-data {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        .contact-icon {
+            color: $footerFormIconColor;
+            font-size: 2rem;
+            display: inline-block;
+        }
+    }
+    .footer-form {
+        background-color: $footerFormContainerColor;
+        display: inline-block;
+        padding: 1.6rem;
+        width: 40%;
+        form {
+            .form-elem {
+                background-color: $footerFormBackgroundColor;
+                border: 3px solid $footerFormBorderColor;
+                box-shadow: $footerBoxShadow;
+                display: block;
+                margin-bottom: 0.5rem;
+                padding: 0.5rem;
+                width: 100%;
+                color: $footerFontColor;
+            }
+            input::placeholder, textarea::placeholder {
+                color: $footerFormPlaceholderColor;
+                font-family: "Exo 2", sans-serif;
+            }
+            .form-btn {
+                background-color: $footerBtnBackgroundColor; 
+                background-image: linear-gradient(45deg, $footerBtnHoverColor 50%, transparent 50%);
+                background-position: 100% 0;
+                background-size: 300%;
+                border: 3px solid $footerFormButtonBorderColor;
+                box-shadow: $footerBoxShadow;
+                color: $footerFormPlaceholderColor;
+                cursor: pointer;
+                display: block;
+                font-family: "Exo 2", sans-serif;
+                font-weight: 900;
+                letter-spacing: 0.1rem;
+                margin-left: auto;
+                padding: 1rem 1.5rem;
+                text-transform: uppercase;
+                transition-duration: 0.5s;
+                &:hover {
+                    background-position: 0 100%; 
+                    color: $footerBtnHoverFontColor;
+                }
+            }
         }
     }
 }
